force-app/main/default/objects/Opportunity/fields/AF_Brand__c.field-meta.xml
<CustomField>
    <fullName>AF_Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AF_Brand</valueSetName>
    </valueSet>
</CustomField>