force-app/main/default/objects/Opportunity/fields/AF_BrandSubStage__c.field-meta.xml
<CustomField>
    <fullName>AF_BrandSubStage__c</fullName>
    <description>Per-brand sub-stage matrix pending client. Intended as a dependent picklist on Brand once the matrix is confirmed.</description>
    <label>Brand Sub-stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>