force-app/main/default/objects/Opportunity/fields/AF_CancellationApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_CancellationApprovalStatus__c</fullName>
    <description>Driven by the Sales Order Cancellation → Owner&apos;s Manager approval process (LFRDN-343 / ALF-RS-13). Same pattern as AF_LostApprovalStatus__c.</description>
    <label>Cancellation Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>