force-app/main/default/objects/Opportunity/fields/AF_CancellationEvidenceReference__c.field-meta.xml
<CustomField>
    <fullName>AF_CancellationEvidenceReference__c</fullName>
    <description>LFRDN-343 / ALF-RS-13 FR1. Reference to supporting evidence (document/attachment) captured before submitting the cancellation for approval. Same pattern as AF_CreditNote__c.AF_EvidenceReference__c.</description>
    <label>Cancellation Evidence Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>