force-app/main/default/objects/Opportunity/fields/AF_CancellationNotes__c.field-meta.xml
<CustomField>
    <fullName>AF_CancellationNotes__c</fullName>
    <description>LFRDN-343 / ALF-RS-13 FR1. Free-text detail captured by the Sales Representative when requesting cancellation. Same pattern as AF_LostNotes__c.</description>
    <label>Cancellation Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>