force-app/main/default/objects/Opportunity/fields/AF_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>AF_CancellationReason__c</fullName>
    <description>LFRDN-343 / ALF-RS-13 FR1. All values proposed — cancellation policy and reason list pending confirmation from business/finance per the story&apos;s Assumptions section.</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Changed Mind</fullName>
            </value>
            <value>
                <fullName>Financing Fell Through</fullName>
            </value>
            <value>
                <fullName>Vehicle Delivery Delay</fullName>
            </value>
            <value>
                <fullName>Trade-In Issue</fullName>
            </value>
            <value>
                <fullName>Duplicate Order</fullName>
            </value>
            <value>
                <fullName>Pricing / Commercial Dispute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>