force-app/main/default/objects/Opportunity/fields/AF_CancellationRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_CancellationRequestedDate__c</fullName>
    <description>LFRDN-343 / ALF-RS-13. Timestamp set by AF_FL_Opp_RequestCancellation when the cancellation request is submitted for approval.</description>
    <label>Cancellation Requested Date</label>
    <type>DateTime</type>
</CustomField>