force-app/main/default/objects/Opportunity/fields/AF_CarriedTestDriveDateTime__c.field-meta.xml
<CustomField>
    <fullName>AF_CarriedTestDriveDateTime__c</fullName>
    <description>Carried over from Lead.AF_TestDriveDateTime__c at conversion.</description>
    <label>Carried Test Drive Date/Time</label>
    <type>DateTime</type>
</CustomField>