force-app/main/default/objects/Opportunity/fields/AF_CarriedTestDriveInterest__c.field-meta.xml
<CustomField>
    <fullName>AF_CarriedTestDriveInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Carried over from Lead.AF_InterestedInTestDrive__c at conversion, so Explore-stage Test Drive creation knows the customer already flagged interest before an Opportunity existed to hold it.</description>
    <label>Carried Test Drive Interest</label>
    <type>Checkbox</type>
</CustomField>