force-app/main/default/objects/Opportunity/fields/AF_CarriedTestDriveLocation__c.field-meta.xml
<CustomField>
    <fullName>AF_CarriedTestDriveLocation__c</fullName>
    <description>Carried over from Lead.AF_TestDriveLocation__c at conversion.</description>
    <label>Carried Test Drive Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>