force-app/main/default/objects/Opportunity/fields/AF_ClosedWonGatePassed__c.field-meta.xml
<CustomField>
    <fullName>AF_ClosedWonGatePassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maintain via automation — payment/handover gate.</description>
    <label>Closed Won Gate Passed?</label>
    <type>Checkbox</type>
</CustomField>