force-app/main/default/objects/Opportunity/fields/AF_CompetitorAlternative__c.field-meta.xml
<CustomField>
    <fullName>AF_CompetitorAlternative__c</fullName>
    <label>Competitor / Alternative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>