force-app/main/default/objects/Opportunity/fields/AF_CompetitorOutcome__c.field-meta.xml
<CustomField>
    <fullName>AF_CompetitorOutcome__c</fullName>
    <description>Competitor names deliberately not enumerated — commercially specific, request them separately per segment.</description>
    <label>Competitor Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased Elsewhere — Unknown</fullName>
            </value>
            <value>
                <fullName>No Purchase Made</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>