force-app/main/default/objects/Opportunity/fields/AF_DeliveryConfirmation__c.field-meta.xml
<CustomField>
    <fullName>AF_DeliveryConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Confirmation</label>
    <type>Checkbox</type>
</CustomField>