force-app/main/default/objects/Opportunity/fields/AF_DuplicateReviewedBy__c.field-meta.xml
<CustomField>
    <fullName>AF_DuplicateReviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities Duplicate-Reviewed</relationshipLabel>
    <relationshipName>AF_DuplicateReviewedOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>