force-app/main/default/objects/Opportunity/fields/AF_DuplicateReviewedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_DuplicateReviewedDate__c</fullName>
    <label>Duplicate Reviewed Date/Time</label>
    <type>DateTime</type>
</CustomField>