force-app/main/default/objects/Opportunity/fields/AF_Handover__c.field-meta.xml
<CustomField>
    <fullName>AF_Handover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handover</label>
    <referenceTo>AF_Handover__c</referenceTo>
    <relationshipLabel>Opportunities (Handover)</relationshipLabel>
    <relationshipName>AF_PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>