force-app/main/default/objects/Opportunity/fields/AF_HandoverComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_HandoverComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow-maintained — pushed from Handover via a child-side flow on every save. Not user-editable.</description>
    <label>Handover Complete</label>
    <type>Checkbox</type>
</CustomField>