force-app/main/default/objects/Opportunity/fields/AF_InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>AF_InvoiceBalance__c</fullName>
    <description>Flow-maintained — pushed from Invoice Summary via a child-side flow on every save. Not user-editable.</description>
    <label>Invoice Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>