force-app/main/default/objects/Opportunity/fields/AF_InvoiceSummary__c.field-meta.xml
<CustomField>
    <fullName>AF_InvoiceSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Summary</label>
    <referenceTo>AF_InvoiceSummary__c</referenceTo>
    <relationshipLabel>Opportunities (Invoice Summary)</relationshipLabel>
    <relationshipName>AF_PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>