force-app/main/default/objects/Opportunity/fields/AF_KeyloopSalesLeadID__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopSalesLeadID__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Sales Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>