force-app/main/default/objects/Opportunity/fields/AF_LostApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_LostApprovalStatus__c</fullName>
    <description>Driven by the Closed Lost → Showroom Manager approval process.</description>
    <label>Lost Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>