force-app/main/default/objects/Opportunity/fields/AF_LostNotes__c.field-meta.xml
<CustomField>
    <fullName>AF_LostNotes__c</fullName>
    <label>Lost Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>