force-app/main/default/objects/Opportunity/fields/AF_LostReason__c.field-meta.xml
<CustomField>
    <fullName>AF_LostReason__c</fullName>
    <description>All values proposed — no list was provided by the customer. The CRM-follow-up flag per reason is tracked separately on AF_LossReason__mdt so it stays admin-editable.</description>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price — Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Price — Customer Budget</fullName>
            </value>
            <value>
                <fullName>Vehicle Unavailable / Lead Time Too Long</fullName>
            </value>
            <value>
                <fullName>Chose a Different Brand</fullName>
            </value>
            <value>
                <fullName>Finance Not Approved</fullName>
            </value>
            <value>
                <fullName>Customer Postponed Purchase</fullName>
            </value>
            <value>
                <fullName>Trade-In Valuation Not Accepted</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Not Genuine / Test Record</fullName>
            </value>
            <value>
                <fullName>Customer Unreachable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>