force-app/main/default/objects/Opportunity/fields/AF_OpportunityOrigin__c.field-meta.xml
<CustomField>
    <fullName>AF_OpportunityOrigin__c</fullName>
    <label>Opportunity Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
            <value>
                <fullName>Sales Direct</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Showroom Walk-in</fullName>
            </value>
            <value>
                <fullName>Service Walk-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>