force-app/main/default/objects/Opportunity/fields/AF_OppOwnerName__c.field-meta.xml
<CustomField>
    <fullName>AF_OppOwnerName__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>