force-app/main/default/objects/Opportunity/fields/AF_PossibleDuplicate__c.field-meta.xml
<CustomField>
    <fullName>AF_PossibleDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Duplicate</label>
    <type>Checkbox</type>
</CustomField>