force-app/main/default/objects/Opportunity/fields/AF_PreferredDealership__c.field-meta.xml
<CustomField>
    <fullName>AF_PreferredDealership__c</fullName>
    <description>Dealership/showroom list pending client — Text placeholder until target structure (picklist vs lookup) is confirmed.</description>
    <label>Preferred Dealership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>