force-app/main/default/objects/Opportunity/fields/AF_PreLostStage__c.field-meta.xml
<CustomField>
    <fullName>AF_PreLostStage__c</fullName>
    <description>QA fix (Defect #9): captures StageName at the moment a Closed Lost request is submitted (AF_FL_Opp_RequestClosure), so AF_FL_Opp_LostRejected can restore it if the Showroom Manager rejects the request. Never shown to users; internal bookkeeping only.</description>
    <inlineHelpText>Internal - captures the stage the Opportunity was in before a Closed Lost request was submitted, so rejection can restore it.</inlineHelpText>
    <label>Stage Before Lost Request</label>
    <length>40</length>
    <type>Text</type>
</CustomField>