force-app/main/default/objects/Opportunity/fields/AF_PrimaryBrandContact__c.field-meta.xml
<CustomField>
    <fullName>AF_PrimaryBrandContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Brand Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Brand Contact)</relationshipLabel>
    <relationshipName>AF_PrimaryBrandOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>