force-app/main/default/objects/Opportunity/fields/AF_PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>AF_PrimaryQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities (Primary Quote)</relationshipLabel>
    <relationshipName>AF_PrimaryQuoteOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>