force-app/main/default/objects/Opportunity/fields/AF_RequisitionCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>AF_RequisitionCompletionDate__c</fullName>
    <description>Requested completion date captured by the Sales Representative when generating the Internal Requisition Form.</description>
    <label>Requisition Requested Completion Date</label>
    <type>Date</type>
</CustomField>