force-app/main/default/objects/Opportunity/fields/AF_RequisitionStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_RequisitionStatus__c</fullName>
    <description>Driven by the Internal Requisition Form -&gt; Sales Manager approval process.</description>
    <label>Internal Requisition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>