force-app/main/default/objects/Opportunity/fields/AF_SalesActivitySyncStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_SalesActivitySyncStatus__c</fullName>
    <label>Last Sales Activity Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>