force-app/main/default/objects/Opportunity/fields/AF_SelectedVehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_SelectedVehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Opportunities (Selected Vehicle)</relationshipLabel>
    <relationshipName>AF_SelectedVehicleOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>