force-app/main/default/objects/Opportunity/fields/AF_Showroom__c.field-meta.xml
<CustomField>
    <fullName>AF_Showroom__c</fullName>
    <description>Walk-in showroom context. Independent picklist (not dependent on AF_BusinessUnit__c, which is written after-save and would leave this empty on the create screen if dependent).</description>
    <label>Showroom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alsadd</fullName>
            </value>
            <value>
                <fullName>Lusail Boulevard</fullName>
            </value>
            <value>
                <fullName>Towers</fullName>
            </value>
            <value>
                <fullName>Jery Al Samur</fullName>
            </value>
            <value>
                <fullName>Pearl (Rolls Royce)</fullName>
            </value>
            <value>
                <fullName>Pearl (Motorcycles)</fullName>
            </value>
            <value>
                <fullName>Lusail</fullName>
            </value>
            <value>
                <fullName>Pearl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>