force-app/main/default/objects/Opportunity/fields/AF_SODocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_SODocumentReference__c</fullName>
    <label>Sales Order Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>