force-app/main/default/objects/Opportunity/fields/AF_SOGeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_SOGeneratedDate__c</fullName>
    <label>Sales Order Generated Date</label>
    <type>DateTime</type>
</CustomField>