force-app/main/default/objects/Opportunity/fields/AF_SOStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_SOStatus__c</fullName>
    <description>ALF-RS-12 (LFRDN-342) FR3 added &quot;Delivered&quot;, set by AF_FL_Handover_SyncOpportunityGate when the linked Handover&apos;s AF_ClosedWonGatePassed__c becomes true. Align remaining values with Sales Order before this ships to production.</description>
    <label>Sales Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Generated</fullName>
                <default>true</default>
                <label>Not Generated</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>