force-app/main/default/objects/Opportunity/fields/AF_SourceOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>AF_SourceOfBusiness__c</fullName>
    <description>Shared with Lead — same value set. Locked after creation by AF_VR_Opp_LockSourceOfBusiness, bypassed only by AF_CanEditSourceOfBusiness.</description>
    <label>Source of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Showroom Walk-in</fullName>
            </value>
            <value>
                <fullName>Digital Campaign</fullName>
            </value>
            <value>
                <fullName>Referral — Customer</fullName>
            </value>
            <value>
                <fullName>Referral — Employee</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Repeat Customer</fullName>
            </value>
            <value>
                <fullName>Fleet / Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>