force-app/main/default/objects/Opportunity/fields/AF_TestDriveGateBlocked__c.field-meta.xml
<CustomField>
    <fullName>AF_TestDriveGateBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow-maintained: true whenever this Opportunity has at least one linked AF_TestDrive__c without a recorded Result. Read by AF_VR_Opp_TestDriveGate to block progression past Explore. Not user-editable.</description>
    <label>Test Drive Gate Blocked?</label>
    <type>Checkbox</type>
</CustomField>