force-app/main/default/objects/Opportunity/fields/AF_TransactionSummaryDocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_TransactionSummaryDocumentReference__c</fullName>
    <label>Transaction Summary Doc Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>