force-app/main/default/objects/Opportunity/fields/AF_VehicleInterest__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleInterest__c</fullName>
    <label>Vehicle Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>