force-app/main/default/objects/Opportunity/fields/AF_VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup, not picklist — needs to be a real catalogue record so quotes/reservations can hang off it. The Lead-side equivalent is AF_VehicleOfInterestVehicle__c (Lookup to VehicleDefinition).</description>
    <label>Vehicle Model</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>AF_VehicleModelOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>