force-app/main/default/objects/Opportunity/fields/AF_VehicleReservation__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleReservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Reservation</label>
    <referenceTo>AF_VehicleReservation__c</referenceTo>
    <relationshipLabel>Opportunities (Vehicle Reservation)</relationshipLabel>
    <relationshipName>AF_PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>