force-app/main/default/objects/Opportunity/validationRules/AF_VR_Opp_CancellationApprovalRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_Opp_CancellationApprovalRequired</fullName>
    <active>true</active>
    <description>LFRDN-343 / ALF-RS-13 AC1: Sales Order Status can only reach Cancelled through the approved Request Cancellation process, not by editing the field directly.</description>
    <errorConditionFormula>AND(ISPICKVAL(AF_SOStatus__c, &quot;Cancelled&quot;), NOT(ISPICKVAL(AF_CancellationApprovalStatus__c, &quot;Approved&quot;)))</errorConditionFormula>
    <errorMessage>Sales Order Status can only be set to Cancelled through the approved Request Cancellation process.</errorMessage>
</ValidationRule>