force-app/main/default/objects/Opportunity/validationRules/AF_VR_Opp_CommitGate.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_Opp_CommitGate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Commit&quot;), ISBLANK(SyncedQuoteId))</errorConditionFormula>
    <errorMessage>Commit stage requires a synced Quote.</errorMessage>
</ValidationRule>