force-app/main/default/objects/Opportunity/validationRules/AF_VR_Opp_LostApprovalRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_Opp_LostApprovalRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Lost&quot;), NOT(ISPICKVAL(AF_LostApprovalStatus__c, &quot;Approved&quot;)))</errorConditionFormula>
    <errorMessage>Closed Lost can only be reached through the approved Request Closure process, not by editing Stage directly.</errorMessage>
</ValidationRule>